sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value getNombrevarleurs
  var a : Int = getNombrevarleurs
                ^AlgGnomeSort:9: error: reassignment to val
      i=i-1
       ^