sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var a : Int = getNombrevarleurs
  var i : Int =0
  var trie = false
  for (i<-0 to a-2){
    if (plusPetit(i+1,i)){
      echange (i+1,i)
      i=i-1
      trie = false
    }
  }
}